# Sfss-eeg-project

./: .gitignore  README.md
SFSS-main/: .gitignore  CMakeLists.txt  README.md  client_runner_main.cpp  field.cpp  field.h  runner.h  server_runner_main.cpp  sfss.h  sfss_ffi.cpp  sfss_ffi.h  sfss_main.cpp  sharing.h  util.h
mock-sensor-python/: mock_eeg_agent.py
rust-workspace/: .gitignore  Cargo.toml
rust-workspace/agent/: Cargo.toml
rust-workspace/agent/src/: main.rs
rust-workspace/bench/: Cargo.toml
rust-workspace/bench/src/: attention.rs  eeg.rs  histogram.rs  main.rs  prio3_backend.rs  sfss_backend.rs
rust-workspace/dashboard/: histogram.html  index.html  index1.html  index2.html
rust-workspace/helper/: Cargo.toml
rust-workspace/helper/src/: main.rs
rust-workspace/leader/: Cargo.toml
rust-workspace/leader/src/: main.rs
rust-workspace/reconstruct/: Cargo.toml
rust-workspace/reconstruct/src/: main.rs
rust-workspace/sfss-sys/: Cargo.toml  build.rs
rust-workspace/sfss-sys/src/: lib.rs
rust-workspace/webcam-agent/: Cargo.toml
rust-workspace/webcam-agent/src/: main.rs
webcam-tracker/: Webcam_attention.py
