[package]
name = "reconstruct"
version = "0.1.0"
edition = "2021"

[dependencies]
sfss-sys = { path = "../sfss-sys" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }