[package]
name = "webcam-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sfss-sys = { path = "../sfss-sys" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"